--- a/W_css/01MinecraftT.css
+++ b/W_css/01MinecraftT.css
@@ -3,8 +3,9 @@
 /* 마크T */
 
 
+.inner { padding: 0 0 0 0;}
+
 header {
-    text-align: 0;
     position: fixed;
     flex-wrap: wrap;
     z-index: 2;
@@ -16,10 +17,12 @@ section {
 
 nav {
     position: relative;
-    padding: 80px 0 20px 0;
+    padding: 80px 0 0 0;
     justify-content: space-between;
     height: auto;
 }
+
+nav > ul {gap: 0;}
 
 .logo {
     background: var(--color1);
@@ -35,43 +38,86 @@ nav {
     height: 35%;
 }
 
-nav {position: relative;}
-
-nav > .login_start {
+.login_start {
     display: flex;
     align-items: center;
     z-index: 1;
     right: 0%;
 }
 
-nav .hamburger {
-    display: flex;
+.hamburger {
+    display: block;
     margin: 0 0 0 20px;
     z-index: 1;
+    width: 66px;
+    height: 79px;
+    background: url(/w_images/01minecraft/hamburger-icon.png) no-repeat 50% 50% / cover ;
+    border: none;
+}
+
+.gamecard > .swiper-wrapper > .swiper-slide{align-items: center;}
+
+.art01 {padding: 200px 0 0 0;}
+
+.hamburger.on {
+    background: url(/w_images/01minecraft/hamburger-closeicon.png)  no-repeat 50% 50% / cover
+    ;
+    /* mix-blend-mode: multiply ; */
 }
 
 /* 껏다켰다 */
 .gnb {
-    display: none;
+    display: flex;
     flex-direction: column;
-    align-items: start;
-    position: fixed;
-    top: 20%;
-    width: 300px;
-    height: fit-content;
-    padding: 5px 10px;
-    background: var(--color1);
-
+    width: 260px;
+    height: 0;
+    width: 0;
+    overflow: hidden;
+    padding-left: 0;
+    position: absolute;
+    top: 100%;
+    background: #000;
+    transition: all 0.5s;
 }
 
-.gnb.on {display: flex;}
+.gnb.on {
+    display: flex;
+    height: 168px;
+    width: 260px;
+}
 /*  */
 
 .gnb li {
     text-align: start;
     width: 100%;
     border-bottom: 2px solid white;
+    padding: 5px 0px 5px 10px;
 }
 
-.News .swiper-button-next {right: 24.5%;}
-.News .swiper-button-prev {left: 24.5%;}
+.gnb:last-child {border-bottom: none;}
+
+.gnb button {padding: 2px 0px;}
+
+.News .swiper-button-next {right: 29%;}
+.News .swiper-button-prev {left: 29%;}
+
+.inner600a {
+    width: auto;
+    padding: 0 10px 0 10px;
+}
+
+.inner600b {
+    width: 38%;
+    justify-content: center;
+}
+
+.hotbox {gap: 30px;}
+
+.box03 {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0;
+}
+
+.box03-2{margin: 0 auto;}
+    
