--- a/W_css/01MinecraftM.css
+++ b/W_css/01MinecraftM.css
@@ -4,7 +4,7 @@
 
 nav {padding: 0;}
 
-nav > div {
+nav .login_start {
     gap:0;
     padding: 13px 10px;
 }
@@ -14,13 +14,13 @@ nav > div {
     height: 40px;
 }
 
-.art01 {padding: 110px 0 0 50px}
-
 .start {
     flex-wrap: wrap;
     width: 100%; 
     /* padding: 30px 0 0 0; */
 }
+
+.art01 {padding: 100px 0 0 0}
 
 .gamecard { 
     display: flex;
@@ -29,8 +29,38 @@ nav > div {
     height: fit-content;
 }
 
-.gamecard > .swiper-wrapper > .swiper-slide{
+.gamecard .swiper-pagination {
+    display: flex;
+    justify-content: center;
     align-items: center;
+    width: 115px;
+    height: 35px;
+    gap: 5px;
+    position: absolute;
+    left: 180px;
+    top: 320px;
+}
+
+.gamecard > .swiper-wrapper > .swiper-slide {
+    align-items: center;
+}
+
+.gamecard > .swiper-wrapper > .swiper-slide > button {
+    height: 54px;
+    width: 136px;
+    left: 450px;
+    top: 300px;
+    margin: 0px;
+    border: 0;
+}
+
+.gamecard > .swiper-wrapper > .swiper-slide > button:hover {
+    height: 54px;
+    width: 136px;
+    left: 450px;
+    top: 300px;
+    margin: 0px;
+    border: 0;
 }
 
 .gamecard > .swiper-wrapper > .swiper-slide img {
@@ -44,13 +74,18 @@ nav > div {
     position: relative;
 }
 
-.logo img {margin: 0 20px 0 0;}
+/* .logo img {margin: 0 20px 0 0;} */
 
-.login_start {padding: 0; margin: 0;}
+.gnbfamily {align-items: start;}
+
+nav .login_start {
+    justify-content: flex-start;
+    left: 0;
+}
 
 .login_start > button {display: none;}
 
-.login_start {
+/* .login_start {
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -62,15 +97,18 @@ nav > div {
     left: 0%;
     gap: 5px;
     margin: 0 20px;
-    z-index: 22;
-}
+} */
 
 .login_start > a {
     border: 2px solid var(--color2);
     padding: 2px;
 }
 
-.gnb.on {
+
+.gnbfamily {left: 0;}
+
+.gnbfamily.on {
+    left: 0;
     width: 100%;
     height: calc(100vh - 120px);
 }
@@ -78,12 +116,12 @@ nav > div {
 /* 100vh= 내 윈도우 높이 꽉참
     - 120px ? = 120 헤더값 때문에 윈도우 밖으로 넘친 상태이므로 헤더값 빼주기   */
 
-.login_start.on {
+/* .login_start.on {
     display: flex;
     position: fixed;
     width: auto;
     height: auto;
-}
+} */
 
 .inner1200 {
     width: 100%;
@@ -154,3 +192,35 @@ nav > div {
     flex-direction: column;
 }
 
+/*  */
+
+/* .login_start {
+    background-color: var(--color1);
+    display: block;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    flex-direction: column;
+    align-items: start;
+    padding: 0;
+}
+
+.login_start.on { 
+    right: auto;
+    left: auto;
+    top: auto;
+    position: relative;
+    width: 100px;
+    height: auto;
+    transition: all 0.2s;
+} */
+
+/* .login_start{
+
+} */
+
+.hamburger {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+}
