--- a/W_css/01Minecraft.css
+++ b/W_css/01Minecraft.css
@@ -4,7 +4,6 @@
 @import url('https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css');
 /* @import url('https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css'); */
 
-
 * {
     box-sizing: border-box;
     padding: 0;
@@ -162,26 +161,27 @@ nav {
     background: var(--color1);
 }
 
-nav > ul {
+.gnbfamily {
+    display: flex ;
     width: 480px;
     height: 100%;
     gap: 35px;
     align-items: center;
     padding: 0 0 0 30px;
+    left: 0;
 }
 
-.gnb li button {
+.gnbfamily li button {
     border: 0;
     color: #fff;
     background-color: transparent;
     font-size: 15px;
 }
 
+.gnbfamily li button:hover {color: var(--color3);}
 
-.gnb li button:hover {color: var(--color3);}
-
-.gnb li .sub {
-    display: flex;
+.gnbfamily .sub {
+    /* display: flex; */
     flex-direction:column;
     position: absolute;
     z-index: 2;
@@ -189,30 +189,27 @@ nav > ul {
     background: var(--color1-1);
     transition: all 0.2s;
     box-shadow: 0px 10px 8px 0px rgba(0, 0, 0, 0.3);
-}
-
-.gnb li .sub {opacity: 0;}
-
-.gnb .sub li {padding: 15px;}
-
-.gnb .sub li:hover { background: rgba(255, 255, 255, 0.15);}
-
-/* li를 호버하면 a 는 초록색 */
-.gnb li:hover > a {color: #6BC349;}
-
-.gnb li:hover .sub {opacity: 1;}
-
-.gnb {display: flex;}
-
-.gnb .sub {
     height: 0; /*ul(gnb)의 높이 안보이게 처리*/
     overflow: hidden;
 }
+/* tlfgja */
 
-.gnb  li:hover .sub {
-    height: 207px;
-    transition: all 0.4s;}
+.gnbfamily .sub li {
+    width: 100%;
+    height: auto;
+    padding: 15px;
+}
 
+.gnbfamily .sub li:hover { background: rgba(255, 255, 255, 0.15);}
+
+/* li를 호버하면 a 는 초록색 */
+.gnbfamily li:hover > a {color: #6BC349;}
+
+.gnbfamily li:hover .sub {
+    height: 204px;
+    width: 260px;
+    transition: all 0.4s;
+}
 
 nav a > img {
     width: 235px;
@@ -224,7 +221,7 @@ nav a > img {
     justify-content: center;
 }
 /* 여기 */
-nav > div{
+nav .login_start{
     width: 480px;
     display: flex;
     justify-content: flex-end;
@@ -245,8 +242,8 @@ nav > div{
     font-weight: 400;
 }
 
-.gnb li > button {
-    display: flex;
+.gnb ul button {
+    /* display: flex; */
     flex-direction: row;
     gap: 5px;
 }
