--- a/W_css/01MinecraftT.css
+++ b/W_css/01MinecraftT.css
@@ -1,9 +1,12 @@
-@charset "utf-8";
+@charset "utf-8";pan
 
 /* 마크T */
 
 
-.inner { padding: 0 0 0 0;}
+.inner {
+    width: 100%;
+    padding: 0 0 0 0;
+}
 
 header {
     position: fixed;
@@ -26,16 +29,16 @@ nav {
 
 .logo {
     background: var(--color1);
-    margin: 0 auto;
     position: absolute;
+    left: 35%;
     top:0;
     padding: 20px;
 }
 
 /* 이미지크기조절 */
 .logo img {
-    width: 35%;
-    height: 35%;
+    width: 80%;
+    height: 80%;
 }
 
 .login_start {
@@ -55,9 +58,46 @@ nav {
     border: none;
 }
 
-.gamecard > .swiper-wrapper > .swiper-slide{align-items: center;}
+.gamecard > .swiper-wrapper > .swiper-slide{
+    width: 100%;
+}
 
-.art01 {padding: 200px 0 0 0;}
+.gamecard {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+
+.gamecard .swiper-wrapper {
+    width: 100%;
+    height: 100%;
+}
+
+.gamecard .swiper-pagination {
+    left: 30px;
+    bottom:30px
+}
+
+/* 230227 */
+.gamecard .swiper-slide img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+.gamecard > .swiper-wrapper > .swiper-slide > button{
+    height: 64px;
+    width: 146px;
+}
+
+.art01 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 20px 0 0 0;
+    overflow: hidden;
+}
 
 .hamburger.on {background: url(/ex/w_images/01minecraft/hamburger-closeicon.png)  no-repeat 50% 50% / cover;}
 
@@ -124,25 +164,57 @@ nav .login_start {
 
 .gnbfamily button {padding: 2px 0px;}
 
-.News .swiper-button-next {right: 29%;}
-.News .swiper-button-prev {left: 29%;}
+.News .swiper-slide img {
+    width: 50%;
+    height: 230px;
+}
+
+.gamecard > .swiper-button-next {
+    background: url(/ex/w_images/01minecraft/버튼_초록우.png) no-repeat 50% 50% / 74px 74px;
+    position: absolute;
+    right: 9%;
+    width: 74px;
+    height: 74px;
+}
+
+.gamecard > .swiper-button-prev {
+    background: url(/ex/w_images/01minecraft/버튼_초록좌.png)no-repeat 50% 50% / 74px 74px;
+    position: absolute;
+    left:9%;
+    width: 74px;
+    height: 74px;
+}
+
+.News .swiper-slide > span {
+    width: 130px;
+    height: 50px;
+    position: relative;
+    Top: 280px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.News .swiper-button-next {right: 26%;}
+.News .swiper-button-prev {left: 26%;}
 
 .inner600a {
     width: auto;
-    padding: 0 10px 0 10px;
+    padding: 0 35px;
 }
 
 .inner600b {
-    width: 38%;
+    width: 500px;
     justify-content: center;
+    padding: 0;
 }
 
 .hotbox {gap: 30px;}
 
 .box03 {
+    display: flex;
+    /* position: relative; */
     flex-direction: row;
     flex-wrap: wrap;
     gap: 0;
 }
-
-.box03-2{margin: 0 auto;}
+.box03-2{margin: 0 100px}
