--- a/W_css/01MinecraftM.css
+++ b/W_css/01MinecraftM.css
@@ -31,8 +31,6 @@ nav .login_start {
     align-items: center;
     width: 100%;
     height: auto;
-    width: 70%;
-    height: auto;
     overflow: hidden;
 }
 
@@ -63,10 +61,9 @@ nav .login_start {
 }
 
 .gamecard > .swiper-wrapper > .swiper-slide > button:hover {
-    height: 54px;
-    width: 136px;
-    left: 450px;
-    top: 300px;
+    height: 44px;
+    width: 116px;
+    left: 50%;
     margin: 0px;
     border: 0;
 }
@@ -191,6 +188,11 @@ nav .login_start {
 
 .News .swiper-button-next {right: 0;}
 .News .swiper-button-prev {left: 0;}
+/*  */
+.News .swiper-slide img {
+    width: 100%;
+    height: 230px;
+}
 
 .inner600a {
     width: 100%;
