--- a/W_css/01Minecraft.css
+++ b/W_css/01Minecraft.css
@@ -84,7 +84,7 @@ a:visited {text-decoration: none;}
 
 h5 {font-size: 15px;}
 
-.Languages {
+.Languages, .Languages02 {
     background: transparent;
     border: none;
     color:#fff
@@ -95,8 +95,14 @@ h5 {font-size: 15px;}
     align-items: center;
     gap: 10px;
 }
+.Languages02 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
 
 .Languages i {font-size: 25px;}
+.Languages02 i {font-size: 25px;}
 
 /* 바닥에서 위로 나올 거기 때문에 바텀0
     left= xy값
@@ -106,7 +112,7 @@ h5 {font-size: 15px;}
     글로벌 높이값 안보이게 처리
 */
 
-.gloval {
+.gloval, .gloval02 {
     display: flex;
     width: 100%;
     position: relative;
@@ -120,21 +126,47 @@ h5 {font-size: 15px;}
 }
 
 /* 글로벌on일 때 높이 값을 갖는다. */
-.gloval.on {height: 120px;}
+.gloval.on {height: 140px;}
+.gloval02.on {height: 140px;}
+
 
 .Languages:hover {color: #6BC349;}
 .Languages:hover .gloval {display: flex;}
+.Languages02:hover {color: #6BC349;}
+.Languages02:hover .gloval {display: flex;}
 
 .gloval ul {
-    width: 1000px;
-    height: 100px;
+    width: 850px;
+    height: auto;
     gap: 5px;
+    padding: 0 50px 0 100px;
     display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
+    justify-content: start;
     margin: 20px 0;
-    padding: 0 0 20px 0;
+}
+.gloval02 ul {
+    width: 850px;
+    height: auto;
+    gap: 5px;
+    padding: 0 50px 0 100px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: start;
+    margin: 20px 0;
+}
+
+.gloval li { 
+    gap: 5px;
+    width: 100px;
+    height: 21px;
+}
+.gloval02 li { 
+    gap: 5px;
+    width: 100px;
+    height: 21px;
 }
 
 
